--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "saml-server-core",
-  "version": "1.0.0",
+  "name": "saml.server-core",
+  "version": "2.0.0",
   "description": "a module for http/s and ws/s servers",
-  "main": "Server-Core.js",
+  "main": "ServerCore.js",
   "type": "module",
   "scripts": {
-    "csv-to-json": "node \"Herramientas/CSV-To-JSON.js\""
+    "test": "node Test/Plantilla.js && node Test/Debug.js",
+    "csv-to-json": "node \"Global/Herramientas/CSV-To-JSON.js\""
   },
   "keywords": [
-    "saml",
+    "Saml",
     "http",
     "https",
     "ws",
