se añadio la carpeta JsonWT al archivo package.json

--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "files": [
     "README.me",
     "LICENSE",
+    "changes.md",
     "ServerCore.js",
     "ServerCore.d.ts",
     "ConsoleUI/",
     "Debug/",
     "Global/",
+    "JsonWT",
     "Server/",
     "Template/"
   ],
