Se elimino el comando CSV-To-JSON

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "main": "ServerCore.js",
   "scripts": {
-    "test": "node Test/Test.js",
-    "csv-to-json": "node \"Global/Herramientas/CSV-To-JSON.js\""
+    "test": "node Test/Test.js"
   },
   "author": {
     "name": "diegofmo0802",
