Se añadio el submodulo utilities que se usara para añadir codigo o variables utiles tales comoa principal del modulo

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "JsonWT/",
     "Mail/",
     "Server/",
-    "Template/"
+    "Template/",
+    "Utilities/"
   ],
   "keywords": [
     "diegofmo0802",
