--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "saml.servercore",
-  "version": "3.6.5",
+  "version": "3.7.0-dev.1",
   "description": "a module for http/s and ws/s servers",
   "type": "module",
-  "main": "ServerCore.js",
+  "main": "build/ServerCore.js",
   "scripts": {
-    "test": "node Test/Test.js"
+    "test": "node tests/test.js"
   },
   "author": {
     "name": "diegofmo0802",
@@ -18,32 +18,26 @@
     "url": "https://github.com/diegofmo0802/ServerCore"
   },
   "files": [
-    "Config/",
-    "ConsoleUI/",
-    "Debug/",
+    "build/",
     "Global/",
-    "JsonWT/",
-    "Mail/",
-    "Server/",
-    "Template/",
-    "Utilities/",
+    ".gitignore",
     "changes.md",
     "LICENSE",
     "Notes.md",
     "README.md",
-    "ServerCore.js",
-    "ServerCore.d.ts"
+    "tsconfig.json"
   ],
   "keywords": [
-    "diegofmo0802",
-    "servercore",
+    "server",
     "core",
-    "framework",
-    "web",
     "http",
     "https",
     "ws",
     "wss",
-    "server"
-  ]
+    "socket"
+  ],
+  "devDependencies": {
+    "@types/node": "^20.14.12",
+    "typescript": "^5.5.4"
+  }
 }
