--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saml.servercore",
-  "version": "3.7.0-Dev.19",
+  "version": "3.7.0",
   "description": "a module for http/s and ws/s servers",
   "type": "module",
   "main": "build/ServerCore.js",
