refactor(Server.ts): Separate routing logic into Router class
Moves all routing-related methods and the rules array from the Server class to a new Router class.
This refactoring improves code organization, reusability, and testability by adhering to the Single Responsibility Principle.
BREAKING CHANGE: Routing methods (addAction, addFile, etc.) are now accessed via the router instance (server.router.addFile()).

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saml.servercore",
-  "version": "4.1.0",
+  "version": "5.0.0-dev.1",
   "description": "a module for http/s and ws/s servers",
   "type": "module",
   "main": "build/ServerCore.js",
