--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "build/ServerCore.js",
   "scripts": {
-    "dev": "npm run compile && tsc --watch",
+    "dev": "rm -rf build && tsc --watch",
     "test": "node tests/test.js",
     "compile": "rm -rf build && tsc",
     "dev.publish": "npm run compile && npm publish --tag Dev"
