--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "rm -rf build && tsc --watch",
     "test": "node tests/test.js",
     "compile": "rm -rf build && tsc",
-    "dev.publish": "npm run compile && npm publish --tag Dev"
+    "dev.publish": "npm run compile && npm publish --tag dev"
   },
   "author": {
     "name": "diegofmo0802",
